style.css
#main-container {
  display: flex;
  flex-direction: column;
  overflow: scroll;
}

#main-container::-webkit-scrollbar {
  width: 0px; /* remove scrollbar space */
  background: transparent;
}

.top-bar__header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 1;
  background-color: #fff;
}

.top-bar__logo {
  margin-top: 25px;
  margin-left: 25px;
  margin-bottom: 25px;
  background-image: url(./assets/logo.svg);
  background-repeat: no-repeat;
  background-size: contain;
  height: 24px;
  width: 171px;
  float: left;
}

.top-bar__button {
  margin-top: 18px;
  margin-right: 25px;
  font-size: 13px;
  color: #ffffff;
  letter-spacing: 0;
  background-color: #007dff;
  border-radius: 4px;
  padding: 10px 16px;
  width: 140px;
  box-sizing: border-box;
  white-space: nowrap;
  border: none;
  float: right;
}

/* SCALE WITH DATA */

.top-bar__scale {
  background-color: #fff;
  height: 46px;
  border-bottom: 1px solid #e9ecef;
  box-shadow: 0 -1px 0 0 #e9ecef;
  min-width: 800px;
  margin-top: 75px;
  display: flex;
  align-items: center;
}

.top-bar__scale__date {
  display: flex;
  flex-direction: row;
  align-items: center;
  font-size: 1.1em;
  font-weight: 500;
  color: #000000;
  letter-spacing: 0;
  padding-left: 24px;
  min-width: 245px;
  height: 100%;
  border-right: 2px solid #e9ecef;
  box-sizing: border-box;
  white-space: nowrap;
}

.top-bar__scale__date_left-arrow {
  margin-right: 12.5px;
  border-radius: 100px;
  width: 14px;
  height: 14px;
  padding: 8px;
  background-color: #e9ecef;
}

.top-bar__scale__date_right-arrow {
  margin-left: 12.5px;
  background-repeat: no-repeat;
  border-radius: 100px;
  width: 14px;
  height: 14px;
  padding: 8px;
  background-color: #e9ecef;
}

.top-bar__scale__date_right-arrow:hover,
.top-bar__scale__date_left-arrow:hover {
  cursor: pointer;
}

/* SCALE TIMELINE */

.top-bar__scale__timeline {
  display: flex;
}

.hour {
  flex: 1;
  position: relative;
  box-sizing: border-box;
  width: 50px;
  text-align: center;
  margin: 8px;
}

.hour:before {
  display: block;
  content: "";

  top: 100%;
  left: 50%;
  position: absolute;

  width: 0;
  /* минус высота заголовка */
  height: calc(100vh - 60px);
  border-left: 1px solid #ccc;
  margin-top: 16px;
}

/* MAIN SCHEDULE PART */

#schedule {
  display: flex;
  flex-direction: row;
  /* overflow: scroll; */
}

.schedule__rooms {
  border-right: 2px solid #e9ecef;
  min-width: 245px;
  display: block;
  white-space: nowrap;
  flex-direction: column;
  box-sizing: border-box;
  padding-left: 24px;
  /* position: sticky; */
  left: 0;
  top: 0;
  -webkit-text-size-adjust: none;
  -moz-text-size-adjust: none;
  -ms-text-size-adjust: none;
}

.floor {
  margin-top: 21px;
}

.floor_num {
  color: #858e98;
  letter-spacing: 0.4px;
  font-size: 0.9em;
}

.room {
  padding-top: 15px;
  font-size: 1.1em;
  color: #000000;
  /* line-height: 17px; */
}

.room > p:last-child {
  padding-top: 3px;
  font-size: 0.9em;
}

.is_busy {
  color: #858e98;
}

.aside--float {
  position: fixed;
  top: 104px;

  visibility: hidden;
}

.aside--float .room > p:first-child {
  display: inline-block;
  visibility: visible;
}

.aside--float .floor_num {
  display: inline-block;
  visibility: visible;
}
/* SCHEDULE TIMELAPSE */

.schedule__timelapse {
  height: 900px;
  min-width: 800px;
  background: #f6f7f9;
}

